--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -1,5 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
-  <section ng-show="isContentVisible('tasks', 'contexts')" class="container-content" list="contexts">
+  <section ng-show="isContentVisible('tasks', 'contexts')" class="container-content"
+    list="getTagsArray('contexts')">
     <h2 class="group-heading justified row">contexts</h2>
     <div list-item-add="getNewContext()" list-item-add-save="saveContext(newItem)">
       <form role="form" class="group-mixed vertically-centered swiper-no-swiping"
@@ -20,8 +21,8 @@
       </form>
     </div>
     <div class="animate-list-item-leave"
-      ng-repeat="context in listInfos.array = (getFullArray()) | orderBy:'trans.created':true
-      | limitTo: currentListLimitTo track by context.trans.uuid" list-item>
+      ng-repeat="context in getVisibleArray(getFullArray, currentListLimitTo) track by context.trans.uuid"
+      list-item>
       <div class="group-mixed vertically-centered">
         <a href class="group-mixed--middle link-list-item" swiper-click="swipeToContext(context)">
           <span class="text-link" clamp=2 ng-bind="'@' + context.trans.title"></span>
