--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,5 +1,5 @@
 <div class="container-fluid--inner" list-container drawer-handle="left" swiper-prevent>
-  <section ng-show="isContentVisible('inbox')" class="container-content" list="items">
+  <section ng-show="isContentVisible('inbox')" class="container-content" list="getItemsArray('all')">
     <h2 class="group-heading justified row" ng-bind="items.length + ' items'"></h2>
 
     <div list-item-add="getNewItem()" list-item-add-save="saveItem(newItem)">
@@ -22,8 +22,8 @@
     </div>
 
     <div class="animate-list-item-leave"
-      ng-repeat="item in listInfos.array = getFullArray() | orderBy:'trans.created':true
-      | limitTo: currentListLimitTo track by item.trans.uuid" list-item>
+      ng-repeat="item in getVisibleArray(getFullArray, currentListLimitTo) track by item.trans.uuid"
+      list-item>
       <div class="group-mixed" ng-class="getListItemClasses(item)">
         <a href class="group-mixed--middle link-list-item"
           swiper-click="openItemEditor(item)">
