--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -255,7 +255,10 @@
           <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in" editable-field-container="auto"
             editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
-            <div list-picker="getListsArray('all')" list-picker-new-item="getNewList()"
+            <div list-picker="{upperHeading: 'active lists', upperArray: getListsArray('active'),
+                               lowerHeading: 'archived lists', lowerArray: getListsArray('archived')}"
+              list-picker-type="active list"
+              list-picker-new-item="getNewList()"
               list-picker-save="closeListPickerAndSetListToItem(task, list)"
               list-picker-clear="closeListPickerAndClearListFromItem(task, list)"
               list-picker-get-selected="task.trans.list"
