--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -166,7 +166,10 @@
           <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in"
             editable-field-container="auto" editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
-            <div list-picker="getListsArray('all')" list-picker-new-item="getNewList()"
+            <div list-picker="{upperHeading: 'active lists', upperArray: getListsArray('active'),
+                               lowerHeading: 'archived lists', lowerArray: getListsArray('archived')}"
+              list-picker-type="active list"
+              list-picker-new-item="getNewList()"
               list-picker-save="closeListPickerAndSetListToItem(note, list, autoSaveNote)"
               list-picker-clear="closeListPickerAndClearListFromItem(note, list, autoSaveNote)"
               list-picker-get-selected="note.trans.list"
