Fixed archive/unarchive to use .mod, created custom saveAnd(Un)archive methods to ListsService. Tweaked onboarding logic for pushing plus button. Fixed ArrayService not using trans for other arrays

--- a/frontend/core/src/main/webapp/static/app/base/modal.html
+++ b/frontend/core/src/main/webapp/static/app/base/modal.html
@@ -35,6 +35,17 @@
           </span>
         </div>
 
+        <!-- LIST PICKER AS MODAL CONTENT -->
+        <div ng-if="listPicker">
+          <div list-picker="listPicker.getListsArray()"
+            list-picker-new-item="listPicker.getNewList()"
+            list-picker-save="listPicker.save(listPicker.itemInEdit, list)"
+            list-picker-clear="listPicker.clear(listPicker.itemInEdit, list)"
+            list-picker-get-selected="listPicker.getSelected(listPicker.itemInEdit)"
+            list-picker-get-this-list="listPicker.itemInEdit">
+          </div>
+        </div>
+
         <div ng-if="messageDetails" class="row">
           <pre class="text-preformatted" ng-bind="messageDetails"></pre>
         </div>
