--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -143,7 +143,7 @@
             </a>
             <a ng-if="showUnarchive()" href swiper-click="unarchiveListInEdit(list)"
               class="group-symmetrical--left link-navigation highlighted">
-              <span class="text-navigation">unarchive</span>
+              <span class="text-navigation">activate</span>
             </a>
 
             <a href swiper-click="swipeToAdvanced('listEditor')" ng-hide="isFooterNavigationHidden()"
