--- a/frontend/core/src/main/webapp/static/app/base/modal.html
+++ b/frontend/core/src/main/webapp/static/app/base/modal.html
@@ -36,7 +36,7 @@
         </div>
 
         <!-- LIST PICKER AS MODAL CONTENT -->
-        <div ng-if="listPicker">
+        <div ng-if="listPicker && !selectedList">
           <div list-picker="listPicker.getListsArray()"
             list-picker-new-item="listPicker.getNewList()"
             list-picker-save="listPicker.save(listPicker.itemInEdit, list)"
