--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -4,7 +4,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom" swiper-prevent>
 
-        <a href ng-hide="isPropertyInEdit()"
+        <a href ng-show="showListAction('saveBack')"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endListEdit()">
           <span class="text-navigation-back"
@@ -13,7 +13,7 @@
           </span>
         </a>
 
-        <a href ng-if="isPropertyInEdit()" class="group-symmetrical--left highlighted"
+        <a href ng-if="showListAction('saveDone')" class="group-symmetrical--left highlighted"
            ng-click="subEditorDone()" editable-field-container="{{getPropertyInEditContainerStatus()}}">
           <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
@@ -64,7 +64,7 @@
           drawer-override-aisle="right" ng-init="drawerAisleInitialized = true">
 
           <!-- LIST TITLE -->
-          <div ng-hide="isPropertyInEdit()" class="row-top-parent">
+          <div ng-show="showListProperty('title')" class="row-top-parent">
             <div class="group-mixed large">
               <div class="group-mixed--middle">
                 <textarea class="text-heading-primary large" ng-model="list.trans.title"
@@ -106,7 +106,7 @@
           </div>
 
           <!-- LIST PICKER -->
-          <div ng-if="listPickerOpen" class="swiper-no-swiping animate-fade-in"
+          <div ng-if="showListSubEditor('list')" class="swiper-no-swiping animate-fade-in"
             ng-init="thisList = list"
             editable-field-container="auto" editable-field-container-scrollable="true"
             editable-field-container-clicked-elsewhere="closeListPicker()" data-snap-ignore="true">
